--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
+android/** linguist-vendored
+ios/** linguist-vendored
+*.cpp linguist-vendored
+*.h linguist-vendored
 *.dart linguist-language=Dart
+
