--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
-android/** linguist-vendored
-ios/** linguist-vendored
-*.cpp linguist-vendored
-*.h linguist-vendored
-*.dart linguist-language=Dart
+*.dart linguist-detectable=true
+*.cpp linguist-detectable=false
+
 
