--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
+# Force GitHub to detect Dart only
 *.dart linguist-detectable=true
+CMakeLists.txt linguist-detectable=false
 *.cpp linguist-detectable=false
-
-
+*.h linguist-detectable=false
+*.c linguist-detectable=false
+*.cmake linguist-detectable=false
